20210504 -- mass file fixing, cleaning, polishing
20210504 -- mass file fixing, cleaning, polishing

--- a/Плагины/Ежедневные заметки.md
+++ b/Плагины/Ежедневные заметки.md
@@ -4,4 +4,4 @@
 
 Вы также можете определить файл-шаблон для ежедневных заметок. Этот шаблон будет скопирован в вашу ежедневную заметку в момент создания, и это хорошее место для тегов или ссылок, которые вы используете каждый день.
 
-Ежедневную заметку можно создать либо щелкнув по значку календаря в левой панели, либо с помощью [[Палитра команд|Палитры команд]]. Также возможно задать сочетание клавиш в разделе Настройки => [[Сочетания клавиш]].
+Ежедневную заметку можно создать либо кликнув по значку календаря в левой панели, либо с помощью [[Палитра команд|Палитры команд]]. Также возможно задать сочетание клавиш в разделе Настройки => [[Сочетания клавиш]].
