--- a/Плагины/Палитра команд.md
+++ b/Плагины/Палитра команд.md
@@ -1,6 +1,6 @@
-Палитра команд включена по умолчанию, так как это очень полезный способ получить доступ практически ко всему функционалу Obsidian без необходимости запоминать все сочетания клавиш. Нажмите `Ctrl/Cmd+P` для вызова палитры и просто напишите название команды. Если у команды есть горячая клавиша, она будет отображена справа. 
+Палитра команд включена по умолчанию, так как это очень полезный способ получить доступ практически ко всему функционалу Obsidian без необходимости запоминать все сочетания клавиш. Нажмите `Ctrl/Cmd+P` для вызова палитры и просто напишите название команды. Если у команды есть горячая клавиша, она будет отображена справа.
 
-Собственные сочетания клавиш для Палитры команд можно задавать  через меню Настройки -> Сочетания клавиш. Нажмите на иконку `*` справа от команды и введите любую угодную вам комбинацию клавиш.
+Собственные сочетания клавиш для Палитры команд можно задавать через меню Настройки => Сочетания клавиш. Кликните по значку `*` справа от команды и введите любую угодную вам комбинацию клавиш.
 
 ### Советы по использованию
 
