--- a/Плагины/Пространства.md
+++ b/Плагины/Пространства.md
@@ -4,7 +4,7 @@
 
 ### Сохранить пространство
 
-Щелкните по иконке «Пространства» на боковой панели чтобы открыть раздел управления пространствами.
+Кликните по значку «Пространства» на боковой панели чтобы открыть раздел управления пространствами.
 
 Задайте для имя для текущего пространства и нажмите кнопку «Сохранить». После чего оно появится в списке ниже.
 
