--- a/Плагины/Публикация.md
+++ b/Плагины/Публикация.md
@@ -4,7 +4,7 @@
 
 ### Включение плагина
 
-В Obsidian в разделе Настройки => Основные плагины включите плагин Публикация. После этого в левой панели появится иконка Публикации (которая выглядит как бумажный самолетик).
+В Obsidian в разделе Настройки => Основные плагины включите плагин Публикация. После этого в левой панели появится значок Публикации (которая выглядит как бумажный самолетик).
 
 После включения плагина вы также можете задать сочетание клавишь для этого параметра или использовать палитру команд для доступа к нему.
 
@@ -28,7 +28,7 @@
 
 ### Изменение параметров сайта
 
-Вы можете изменить различные параметры сайта, нажав на иконку шестеренки рядом с названием сайта в диалоге Публикация изменений.
+Вы можете изменить различные параметры сайта, нажав на значок шестеренки рядом с названием сайта в диалоге Публикация изменений.
 
 #### Метаданные
 
@@ -45,7 +45,7 @@
 В этом разделе вы можете:
 
 - Включить специальный режим, называемый «раздвижные окна», который выглядит как [записки Andy Matuschak](https://notes.andymatuschak.org/);
-- Включить просмотр страницы при наведении курсора, как при использовании плагина [[Предпросмотр страницы]] в приложении;
+- Включить предварительный просмотр страницы при наведении курсора, как при использовании плагина [[Предпросмотр страницы]] в приложении;
 - Настроить длину строки и строгий разрыв строк.
 
 #### Компоненты
@@ -80,4 +80,4 @@
 
 ### Удаление всего сайта
 
-Если вы хотите удалить весь сайт, нажмите на иконку стрелок в верхней части плагина Публикация. Затем нажмите на кнопку X, чтобы удалить ваш сайт. Обратите внимание: это удалит только ваш общедоступный сайт, но не повлияет ни на какие файлы в вашем хранилище. Вы всегда можете выбрать повторную публикацию своих заметок.
+Если вы хотите удалить весь сайт, кликните по значку переключения (стрелки) в верхней части плагина Публикация. Затем нажмите на кнопку `X`, чтобы удалить ваш сайт. Обратите внимание: это удалит только ваш общедоступный сайт, но не повлияет ни на какие файлы в вашем хранилище. Вы всегда можете выбрать повторную публикацию своих заметок.
