--- a/Продвинутое использование/Перетаскивание объектов.md
+++ b/Продвинутое использование/Перетаскивание объектов.md
@@ -10,7 +10,7 @@
 - Вы можете перетащить файл из результатов [[Поиск|поиска]].
 - Вы можете перетащить файл из [[Обратные ссылки|панели обратных ссылок]] или несвязанных ссылок.
 - Вы можете перетащить файл из [[Избранное|избранного]].
-- Вы можете перетащить файл по ссылке внутри заметки в режиме просмотра.
+- Вы можете перетащить файл по ссылке внутри заметки в режиме предварительного просмотра.
 
 ### Куда можно их перетаскивать
 
@@ -21,7 +21,7 @@
 
 ### Перетаскивание извне Obsidian 
 
-- Вы можете перетащить любой HTML-контент из браузера в Obsidian, чтобы автоматически преобразовать его в формат Markdown. 
+- Вы можете перетащить любой HTML-контент из браузера в Obsidian, чтобы автоматически преобразовать его в формат Markdown.
 - Вы можете перетащить любые файлы из внешнего проводника файлов, чтобы Obsidian импортировал (скопировал) эти файлы в папку вложений вашего хранилища и вставил в заметку внутренние ссылки на них. Удерживайте `Ctrl` для создания абсолютных ссылок вида `file: ///` на эти файлы вместо копирование их в хранилище. 
 
 ### Перетаскивание файлов из Obsidian 
