--- a/Руководства/Импорт данных.md
+++ b/Руководства/Импорт данных.md
@@ -1,6 +1,6 @@
-Есть некоторые различия между тем как работают различные PKM и системы ведения заметок. Это означает, что перемещение данных между ними может быть немного сложным. В большинстве случаев то, что вы используете может быть сконвертировано в Markdown, и будет весьма неплохо работать c Obsidian. Но с некоторыми вещами, такими как теги и ссылки, могут быть сложности.
+Есть некоторые различия между тем как работают различные PKM и системы ведения заметок. Это означает, что перемещение данных между ними может быть немного сложным. В большинстве случаев то, что вы используете может быть сконвертировано в Markdown и будет весьма неплохо работать в Obsidian. Но с некоторыми вещами, такими как теги и ссылки, могут быть сложности.
 
-На нашем форуме есть [тема с подборкой методов](https://forum.obsidian.md/t/meta-post-migration-workflows/768) импорта данных, рзработанных другими пользователями. На данный момент она включает:
+На нашем форуме есть [тема с подборкой методов](https://forum.obsidian.md/t/meta-post-migration-workflows/768) импорта данных, разработанных другими пользователями. На данный момент она включает:
 
 - [Импорт из Notion](https://forum.obsidian.md/t/import-from-notion/636)
 - [Автоматизированный импорт из Notion](https://forum.obsidian.md/t/notion-2-obsidian-migration-instructions/2728)
@@ -19,7 +19,7 @@
 
 ### Импорт из Roam Research
 
-Есули у васть есть данные в Roam, их легко экспортировать и поэкспериментировать с ними в Obsidian.
+Если у вас есть данные в Roam, их легко экспортировать и поэкспериментировать с ними в Obsidian.
 
 > 1. Выберите "Export all" в меню:
 > ![[Pasted image.png]]
@@ -29,7 +29,7 @@
 
 > 3. Распакуйте архив "Roam-Export-xxxxxxxxxxxxx.zip" в папку.
 
-> 4.  Нажмите на иконку «Другое хранилище» в нижнем левом углу приложения и выберите параметр «Открыть папку как хранилище». 
+> 4. Кликните по значку «Другое хранилище» в нижнем левом углу приложения и выберите параметр «Открыть папку как хранилище».
 > Выберите папку в которую вы только что распаковали архив.
 
 > 5. Используйте плагин [[Импорт Markdown-файлов]] для конвертации Markdown-файлов из формата Roam Research в формат Obsidian.
@@ -48,4 +48,4 @@
 
 Для того, чтобы исправить это, вы можете использовать плагин [[Импорт Markdown-файлов]] для конвертации Zettelkasten ссылок в формат `[[202001010000 My Note]]` или в `[[202001010000 My Note|My Note]]`.
 
-Вас также может заинтересовать плагин [[Zettelkasten]].
+Вас также может заинтересовать плагин [[Префикс Zettelkasten]].
