--- a/Руководства/Работа с несколькими заметками.md
+++ b/Руководства/Работа с несколькими заметками.md
@@ -4,9 +4,9 @@
 
 ##### 1. ==Используйте клавишу Ctrl/Cmd== когда хотите открыть что-либо в новой области.
 
-По умолчанию, когда вы щелкаете по чему-либо, оно открывается в активной области. Активная область отмечена выделенной полосой под заголовком, а имя открытого файла отображается ярче, чем в неактивной области. 
+По умолчанию, когда вы кликаете по чему-либо, оно открывается в активной области. Активная область отмечена выделенной полосой под заголовком файла, а имя открытого файла отображается ярче, чем в неактивной области.
 
-Для открытия заметок в новых областях, удерживайте `Ctrl/Cmd` если вы щелкаете по чему-либо в режиме Просмотра и `Shift + Ctrl/Cmd` в режиме Редактирования. Это относится к ряду мест, включая [[Файловый менеджер]], [[Обратные ссылки]] %%работа с обратными ссылками%% (упоминания со ссылкой и без), результаты [[Поиск|Поиска]] и [[Граф]]. Это также относится к кнопкам. Например, вместо просмотра заметки в активной области, вы можете удерживая `Ctrl/Cmd` щелкнуть по кнопке Просмотр/Редактирование в строке заголовка и открыть ее в новой области. При использовании Быстрого перехода, удержание `Cmd/Ctrl` при нажатии `Enter` приводит к открытию новой области.
+Для открытия заметок в новых областях, удерживайте `Ctrl/Cmd` если вы кликаете по чему-либо в режиме предварительного просмотра и `Shift + Ctrl/Cmd` в режиме редактирования. Это относится к ряду мест, включая [[Файловый менеджер]], [[Обратные ссылки]] %%работа с обратными ссылками%% (упоминания со ссылкой и без), результаты [[Поиск|Поиска]] и [[Граф]]. Это также относится к кнопкам. Например, вместо просмотра заметки в активной области, вы можете удерживая `Ctrl/Cmd` кликнуть по кнопке Просмотр/Редактирование в строке заголовка и открыть ее в новой области. При использовании Быстрого перехода, удержание `Cmd/Ctrl` при нажатии `Enter` приводит к открытию новой области.
 
 ---
 
@@ -30,11 +30,11 @@
 
 ##### 4. Используйте ==связанные области== для просмотра.
 
-[[Связанная область]] создается, если удерживая `Ctrl/Cmd` щелкнуть по кнопке Просмотр/Редактирование в строке заголовка.
+[[Связанная область]] создается, если удерживая `Ctrl/Cmd` кликнуть по кнопке Просмотр/Редактирование в строке заголовка.
 
 При привязке к другой области положение прокрутки областей будет синхронизировано, и если вы откроете файл в одной области, в связанной области откроется тот же файл.
 
-[[Связанная область|Связанные области]] будут отмечены иконкой звена цепочки. Вы можете навести курсор на иконку, чтобы увидеть какая область связана с какой, или нажать на иконку чтобы отвязать области друг от друга.
+[[Связанная область|Связанные области]] будут отмечены значком звена цепочки. Вы можете навести курсор на значок, чтобы увидеть какая область связана с какой, или нажать на значок чтобы отвязать области друг от друга.
 
 Для получения дополнительной информации см. [[Связанная область]].
 
@@ -42,7 +42,7 @@
 
 ##### 5. Области могут быть ==перегруппированы перетаскиванием==.
 
-Тяните за иконку области в левом верхнем углу, чтобы расположить их так, как вам нужно. Для получения более подробной информации см. [[Расположение областей]].
+Тяните за значок области в левом верхнем углу, чтобы расположить их так, как вам нужно. Для получения более подробной информации см. [[Расположение областей]].
 
 ---
 
