--- a/Руководства/Создание ссылок на блоки.md
+++ b/Руководства/Создание ссылок на блоки.md
@@ -2,7 +2,7 @@
 
 ### Что такое блок?
 
-«Блоком» может быть параграф, цитата, пункт списка и так далее. В общем, всё, что имеет пустые строки до и после, является блоком. ^dcf64c
+«Блоком» может быть параграф, цитата, пункт списка и так далее. В общем, всё, что имеет пустые строки до и после себя, является блоком. ^dcf64c
 
 ### Ссылка на блок
 
@@ -10,7 +10,7 @@
 
 После того, как вы нажмете Enter, для вас будет сгенерирована ссылка на этот блок в формате, аналогичном `[[filename#^dcf64c]]`, где `dcf64c` идентификатор блока, который только что был сгенерирован для вас. 
 
-Если вы не уверены, в каком файле находится блок, другой способ – начать ввод с `[[^^` и искать блоки во всех файлах. Поиск будет производиться по всем блокам в вашем хранилище, что может привести к небольшой задержке, если ваше хранилище большое.  
+Если вы не уверены, в каком файле находится блок, другой способ – начать ввод с `[[^^` и искать блоки во всех файлах. Поиск будет производиться по всем блокам в вашем хранилище, что может привести к небольшой задержке, если ваше хранилище большое.
 
 Например, [[Создание ссылок на блоки#^dcf64c|dcf64c]] это ссылка на блок выше.
 
@@ -24,16 +24,16 @@
 
 ### Ручной ввод идентификатора
 
-Если вы хотите использовать легко читаемый человеком индентификатор блока, вы можете самостоятельно вписать `^your-id` после блока. Убедитесь в том, что если вы помещаете идентификатор в конец строки, перед ним есть хотябы один пробел.
+Если вы хотите использовать легко читаемый человеком идентификатор блока, вы можете самостоятельно вписать `^your-id` после блока. Убедитесь в том, что если вы помещаете идентификатор в конец строки, перед ним есть хотя бы один пробел.
 
 Чтобы ссылаться на сложные блоки, такие как таблицы, поместите идентификатор блока после самого блока так, чтобы перед ним и после него была пустая строка.
 
 После добавления идентификатора блока вручную, когда вы ссылаетесь на этот блок, `your-id` будет использоваться вместо случайно сгенерированного идентификатора.
 
-Обратите внимание, что при ручном вводе в идентификаторах блоков допускается использовать только буквы, цифры и дефисы.
+Обратите внимание, что при ручном вводе в идентификаторах блоков допускается использовать только буквы, цифры и тире.
 
 ### Совместимость
 
 Имейте в виду, что ссылка на блок не является частью стандартного Markdown. Это скорее специфическая разновидность Markdown от Obsidian. Это означает, что эти ссылки не будут работать за пределами Obsidian.
 
-Вы по-прежнему можете найти указанный блок, выполнив поиск по идентификатору блока, что является скорее ручным процессом. Таким образом связь не потеряна, если у вас есть программа, которая может выполнять поиск в папке.
+Вы по-прежнему можете найти указанный блок, выполнив поиск по идентификатору блока, что является скорее ручным процессом. Таким образом связь не будет потеряна, если у вас есть программа, которая может выполнять поиск в папке.
