--- a/Руководства/Управление вложениями.md
+++ b/Руководства/Управление вложениями.md
@@ -14,7 +14,7 @@
 
 Вставка локального файла из системного проводника или из буфера обмена поместит файл в ваше хранилище.
 
-Это очень удобно в сочетании с инструментами для создания снимков экрана. 
+Это очень удобно в сочетании с инструментами для создания снимков экрана.
 
 ### Перетаскивание
 
@@ -28,13 +28,13 @@
 
 ## Изменения места хранения вложенных файлов
 
-По умолчанию новые вложенные файлы сохраняются в корневую директорию вашего хранилища. Вы можете изменить этот параметр в Настройки -> Файлы и ссылки -> Место для вложенных файлов по умолчанию.
+По умолчанию новые вложенные файлы сохраняются в корневую директорию вашего хранилища. Вы можете изменить этот параметр в разделе Настройки => Файлы и ссылки => Место для вложенных файлов по умолчанию.
 
 ### Выбор папки
 
 Вы можете выбрать постоянную папку для размещения вложенных файлов в ней. Для этого необходимо выбрать вариант «В папке, указанной ниже» и выбрать имя папки в вашем хранилище, в появившемся ниже поле.
 
-Кроме того, вы можете щелкнуть правой кнопкой мыши по папке в [[Файловый менеджер|файловом менеджере]] и выбрать пункт «Установить как папку для вложенных файлов».
+Кроме того, вы можете кликнуть правой кнопкой мыши по папке в [[Файловый менеджер|файловом менеджере]] и выбрать пункт «Установить как папку для вложенных файлов».
 
 ### Папка где расположен файл
 
