--- a/Руководства/Форматирование заметок.md
+++ b/Руководства/Форматирование заметок.md
@@ -127,11 +127,11 @@ _Их **можно** комбинировать_
 Ссылки в формате Markdown можно использовать как для отсылки к внешним объектам вроде веб-страниц, так и к внутренним страницам или изображениям.
 
 ```md
-http://obsidian.md - создаются автоматически!
+http://obsidian.md – создаются автоматически!
 [Obsidian](http://obsidian.md)
 ```
 
-http://obsidian.md - создаются автоматически!
+http://obsidian.md – создаются автоматически!
 [Obsidian](http://obsidian.md)
 
 #### Ссылки Obsidian URI
@@ -216,15 +216,15 @@ function fancyAlert(arg) {
     $.facebox({div:'#foo'})
   }
 }
-```  
+```
 
 ```md
 	Текст с отступом, сделанным с помощью табуляции, будет
-	выглядеть как блок кода в области просмотра.
+	выглядеть как блок кода в области предварительного просмотра.
 ```
 
-	Текст с отступом, сделанным с помощью табуляции, будет выглядеть как блок кода в области просмотра. 
-    
+	Текст с отступом, сделанным с помощью табуляции, будет выглядеть как блок кода в области предварительного просмотра.
+
 ---
 
 ### Список задач
@@ -235,7 +235,7 @@ function fancyAlert(arg) {
 - [x] это выполненная задача
 - [?] это тоже выполненная задача (работает с любым символом)
 - [ ] это не выполненная задача
-- [ ] задачи в области просмотра помечаются выполненными при клике на чекбокс
+- [ ] задачи в области предварительного просмотра помечаются выполненными при клике на чекбокс
 ```
 
 - [x] поддерживаются #теги, [ссылки](), **форматирование**
@@ -243,7 +243,7 @@ function fancyAlert(arg) {
 - [x] это выполненная задача
 - [?] это тоже выполненная задача (работает с любым символом)
 - [ ] это не выполненная задача
-- [ ] задачи в области Просмотра могут помечаются выполненными при клике на чекбокс
+- [ ] задачи в области предварительного просмотра помечаются выполненными при клике на чекбокс
 
 ---
 
@@ -275,17 +275,17 @@ function fancyAlert(arg) {
 :------------|------------:
 по краю с использованием двоеточия `:` | по правому краю
 
-В таблицах работаю ссылки. Если в ссылке используется вертикальная черта `|`,  она должна быть изолирована символом  `\`, чтобы не быть распознанной как элемент таблицы.
+В таблицах работаю ссылки. Если в ссылке используется вертикальная черта `|`, она должна быть изолирована символом `\`, чтобы не быть распознанной как элемент таблицы.
 
 ```md
 Первый заголовок | Второй заголовок
 ------------ | ------------
-[[Форматирование заметок\|Форматирование]]	|  [[Сочетания клавиш\|Горячие клавиши]]
+[[Форматирование заметок\|Форматирование]] | [[Сочетания клавиш\|Горячие клавиши]]
 ```
 
 Первый заголовок | Второй заголовок
 ------------ | ------------
-[[Форматирование заметок\|Форматирование]]	|  [[Сочетания клавиш\|Горячие клавиши]]
+[[Форматирование заметок\|Форматирование]] | [[Сочетания клавиш\|Горячие клавиши]]
 
 ---
 
