--- a/Области/Расположение областей.md
+++ b/Области/Расположение областей.md
@@ -1,14 +1,14 @@
 Одна из вещей, которая отличает Obsidian от других приложений для создания заметок – это то, насколько легко открыть несколько файлов в выбранном вами расположении.
 
-Окно, в котором открывается файл, мы называем «областью». Вы можете использовать сколько угодно областей. 
+Окно, в котором открывается файл, мы называем «областью». Вы можете использовать сколько угодно областей.
 
 ### Способы открытия новых областей
 
 #### Открытие ссылок
 
-Как правило, вы можете щелкнуть по ссылке на файл, удерживая `Ctrl` (в Windows и Linux) или `Cmd` (в macOS), чтобы открыть его в новой области. Это включает в себя щелчок по файлам в [[Файловый менеджер|файловом менеджере]], в результатах [[Поиск|поиска]], в [[Обратные ссылки|обратных ссылках]], в [[Граф|Графе]] и так далее. 
+Как правило, вы можете кликнуть по ссылке на файл, удерживая `Ctrl` (в Windows и Linux) или `Cmd` (в macOS), чтобы открыть его в новой области. Это включает в себя клик по файлам в [[Файловый менеджер|файловом менеджере]], в результатах [[Поиск|поиска]], в [[Обратные ссылки|обратных ссылках]], в [[Граф|Графе]] и так далее.
 
-Заметным исключением является работа в режиме редактирования. Поскольку в режиме редактирования щелчок по ссылке ведет к ее редактированию, а не к переходу по ней, как это происходит в случае удерживания `Ctrl/Cmd` с щелчком по ссылке. Поэтому вам нужно будет удерживать `Shift` в дополнение к `Ctrl/Cmd`, чтобы открыть ссылку в новой области.
+Заметным исключением является работа в режиме редактирования. Поскольку в режиме редактирования клик по ссылке ведет к ее редактированию, а не к переходу по ней, как это происходит в случае удерживания `Ctrl/Cmd` с кликом по ссылке. Поэтому вам нужно будет удерживать `Shift` в дополнение к `Ctrl/Cmd`, чтобы открыть ссылку в новой области.
 
 #### Разделение текущей области
 
@@ -20,17 +20,17 @@
 
 ### Перегруппировка областей
 
-Для перемещения области, просто потяните за иконку области в левом верхнем углу. Когда вы перетаскиваете область, места, куда можно ее переместить будут визуально выделены. Перенос в одну из четырех частей соседней области создает горизонтальный или вертикальный разделитель между областями. А перенос в центральную часть соседней области меняет их местами.
+Для перемещения области, просто потяните за значок области в левом верхнем углу. Когда вы перетаскиваете область, места, куда можно ее переместить будут визуально выделены. Перенос в одну из четырех частей соседней области создает горизонтальный или вертикальный разделитель между областями. А перенос в центральную часть соседней области меняет их местами.
 
 Вы также можете перемещать области в боковые панели. Области расположенные на боковых панелях работают немного по-другому, для получения дополнительной информации см. раздел [[Расположение областей#Области в боковой панели|Области в боковой панели]] ниже.
 
 ### Области в боковой панели
 
-Есть некоторые особенности работы с областями, которые находятся в боковых панелях. 
+Есть некоторые особенности работы с областями, которые находятся в боковых панелях.
 
 #### Области в боковой панели делят пространство с вкладками
 
-Когда вы перетаскиваете область в боковую панель, там для нее создается новая вкладка. Доступ к различным областям в боковой панели можно получить щелкнув на соответствующий значок вкладки.
+Когда вы перетаскиваете область в боковую панель, там для нее создается новая вкладка. Доступ к различным областям в боковой панели можно получить кликнув на соответствующий значок вкладки.
 
 #### Области в боковой панели не отображают имя файла
 
@@ -44,7 +44,7 @@
 
 #### Переключение режимов редактирования и просмотра в боковой панели
 
-Сочетание клавиш для переключения между режимами редактирования и просмотра работает только в основном рабочем пространстве. В боковой панели вам необходимо использовать меню, которое можно вызвать по правому щелчку на вкладке файла, и выбрать «Просмотр» или «Редактировать» в зависимости от текущего режима области.
+Сочетание клавиш для переключения между режимами редактирования и предварительного просмотра работает только в основном рабочем пространстве. В боковой панели вам необходимо использовать меню, которое можно вызвать по правому клику на вкладке файла, и выбрать «Просмотр» или «Редактировать» в зависимости от текущего режима области.
 
 ### Сохранение и загрузка расположения областей
 
