--- a/Области/Связанная область.md
+++ b/Области/Связанная область.md
@@ -1,7 +1,7 @@
 Области можно связывать друг с другом. Это дает 2 основных эффекта:
 
-- По умолчанию, при открытии новой [[Режимы просмотра и редактирования|области предварительного просмотра]] из области редактирования, новая область связывается со исходной. Это означает, что любые изменения, которые вы делаете в редакторе будут отображаться в области просмотра в реальном времени. Это также означает, что прокрутка одной области будет прокручивать и другую.
+- По умолчанию, при открытии новой [[Режимы просмотра и редактирования|области предварительного просмотра]] из области редактирования, новая область связывается с исходной. Это означает, что любые изменения, которые вы делаете в редакторе будут отображаться в области предварительного просмотра в реальном времени. Это также означает, что прокрутка одной области будет прокручивать и другую.
 
 - Когда создается новая [[Работа с обратными ссылками|область обратных ссылок]] для конкретной заметки, она будет связана с текущей заметкой. Это значит, что обратные ссылки будут показаны только для заметки в этой области. Это полезно, когда вы хотите иметь под рукой перечень обратных ссылок заметки, но основная панель обратных ссылок в то же время изменяется в соответствии с тем, с какими заметками вы работаете в это время.
 
-Связанные области отмечаются иконкой звена цепочки. Если подвести курсор мыши к этой иконке, то подсветятся связанные области. Нажатие на иконку отвяжет области друг от друга. Но это не закроет ранее связанную область.
+Связанные области отмечаются значком звена цепочки. Если подвести курсор мыши к этому значку, то подсветятся связанные области. Клик по значку отвяжет области друг от друга, но не закроет ранее связанную область.
