--- a/Плагины/Поиск.md
+++ b/Плагины/Поиск.md
@@ -16,7 +16,7 @@
 
 Obsidian запомнит ваши последние использованные поисковые запросы.
 
-Эти запросы будут отображаться, когда ваш поисковый запрос пуст. Вы можете щелкнуть по любому из них, чтобы искать по нему снова, что позволит вам легко повторно выполнить предыдущие запросы.
+Эти запросы будут отображаться, когда ваш поисковый запрос пуст. Вы можете кликнуть по любому из них, чтобы искать по нему снова, что позволит вам легко повторно выполнить предыдущие запросы.
 
 Чтобы очистить историю поиска, просто нажмите на кнопку `X`.
 
@@ -56,7 +56,7 @@ Obsidian запомнит ваши последние использованны
 
 ### Сложные поисковые запросы
 
-При создании поискового запроса не забывайте, что щелчок по переключателю «Объяснить поисковую строку» даст объяснение того, что ищется. Это может быть очень полезно при отладке сложного поискового запроса.
+При создании поискового запроса не забывайте, что клик по переключателю «Объяснить поисковую строку» даст объяснение того, что ищется. Это может быть очень полезно при отладке сложного поискового запроса.
 
 - Разделенные пробелом слова в поисковом запросе будут искаться раздельно и независимо в каждой заметке. Например, `foo bar` покажет заметку в которой есть и `foo` и `bar` где угодно в заметке.
 - `"Строки в кавычках"` позволяют искать последовательность слов, разделенных пробелами, иначе говоря – фразы. Таким образом поиск `"foo bar"` с кавычками покажет только те заметки, в которых эти слова стоят последовательно. Можно использовать экранирующий-символ обратной косой черты перед кавычкой `\"` если вам необходимо найти строчку, в которой есть двойная кавычка. Использование `\\` поможет найти обратную косую черту.
