--- a/Плагины/Предпросмотр страницы.md
+++ b/Плагины/Предпросмотр страницы.md
@@ -2,4 +2,4 @@
 
 ![[Pasted image 13.png]]
 
-Это работает в области Просмотра. В области Редактирования это тоже возможно, если навести курсор на ссылку удерживая нажатой клавишу `Ctrl/Cmd`, что вызовет окно предпросмотра.
+Это работает в области предварительного просмотра. В области редактирования это тоже возможно, если навести курсор на ссылку удерживая нажатой клавишу `Ctrl/Cmd`, что вызовет окно предпросмотра.
