--- a/Плагины/Шаблоны.md
+++ b/Плагины/Шаблоны.md
@@ -4,7 +4,7 @@
 
 Каждый фрагмент шаблона – это обычная Markdown заметка, как и все остальное в Obsidian.
 
-Чтобы обозначить файлы шаблонов, поместите их в папку и выберите эту папку в Настройки -> Шаблоны -> Пусть к папке шаблонов, после включения плагина.
+Чтобы обозначить файлы шаблонов, поместите их в папку и выберите эту папку в Настройки => Шаблоны => Пусть к папке шаблонов, после включения плагина.
 
 ### Вставить шаблон
 
@@ -34,4 +34,4 @@ _Подсказка: если вы хотите иметь два формата
 
 ### Использование пользовательских форматов дат в других местах
 
-В настоящее время такие даты как `{{date:YYYY-MM-DD}}` и `{{time:HH:mm}}` также работают в файле шаблонов плагинов [[Ежедневные заметки]] и [[Zettelkasten]]. Однако, `{{date}}` и `{{time}}` пока не работают.
+В настоящее время такие даты как `{{date:YYYY-MM-DD}}` и `{{time:HH:mm}}` также работают в файле шаблонов плагинов [[Ежедневные заметки]] и [[Префикс Zettelkasten]]. Однако, `{{date}}` и `{{time}}` пока не работают.
