--- a/Руководства/Встраивание вложений в заметки.md
+++ b/Руководства/Встраивание вложений в заметки.md
@@ -1,6 +1,6 @@
 ### Вложенные файлы
 
-Вы можете вложить в заметку файлы, такие как изображения или аудио-файлы. Используйте следующий синтаксис  `![[filename.png]]`:
+Вы можете вложить в заметку файлы, такие как изображения или аудио-файлы. Используйте следующий синтаксис `![[filename.png]]`:
 
 ![[Engelbart.jpg]]
 
@@ -16,7 +16,7 @@
 
 ### Использование iframe
 
-«iframe» – это способ вложения одной веб-страницы в другую. Он может использоваться, так как Markdown поддерживает использование HTML, который является простейшим языком для построения веб-страниц, которые мы видим каждый день. 
+«iframe» – это способ вложения одной веб-страницы в другую. Он может использоваться, так как Markdown поддерживает использование HTML, который является простейшим языком для построения веб-страниц, которые мы видим каждый день.
 
 Например, такая запись:
 
@@ -34,11 +34,11 @@
 <iframe src="ВСТАВЬТЕ ВАШУ ССЫЛКУ ЗДЕСЬ"></iframe>
 ```
 
-Некоторые веб-сайты имеют осбенности, которые не позволяют вам встраивать их. Например, вы не можете встроить видео с YouTube, используя его обычный URL-адрес, но вы можете использовать его embed URL-адрес: `https://www.youtube.com/embed/VIDEO_ID`.
+Некоторые веб-сайты имеют осбенности, не позволяющие их встраивать. Например, вы не можете встроить видео с YouTube, используя обычную ссылку, но вы можете встроить его с использованием ссылки вида `https://www.youtube.com/embed/VIDEO_ID`.
 
-Если вы хотите встроить веб-сайт, попробуйте поискать для него встраивание в формате «{website} embed iframe».
+Если вы хотите встроить веб-сайт, попробуйте поискать для него встраивание в формате «{название_сайта} embed iframe».
 
-Например, вы можете вставлять твиты из Twitter так, как это предлагается результатами поиска:
+Например, вы можете вставлять твиты из Twitter так, как это предлагается в результатах поиска:
 
 ```html
 <iframe
@@ -50,8 +50,7 @@
 </iframe>
 ```
 
-<iframe border=0 frameborder=0 height=250 width=550  
- src="https://twitframe.com/show?url=https%3A%2F%2Ftwitter.com%2Fjack%2Fstatus%2F20"></iframe>
+<iframe border=0 frameborder=0 height=250 width=550 src="https://twitframe.com/show?url=https%3A%2F%2Ftwitter.com%2Fjack%2Fstatus%2F20"></iframe>
 
 ---
 
@@ -59,20 +58,20 @@
 
 Мы отталкивались от уже имеющегося в Markdown синтаксиса вставки изображений и исходили из следующих идей:
 
- 1. `[Image](link.png)` ссылается на изображение, а `![Image](link.png)` вставляет его.
+ 1. `[Image](link.png)` ссылается на изображение, а `![Image](link.png)` встраивает его.
 
- 2. Синтаксис внутренней ссылки основан на предположении, что `[[My page]]` это сокращение (или «[синтаксический сахар](https://ru.wikipedia.org/wiki/%D0%A1%D0%B8%D0%BD%D1%82%D0%B0%D0%BA%D1%81%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D1%81%D0%B0%D1%85%D0%B0%D1%80)», если угодно) для `[My page](My page)`.
+ 2. Синтаксис внутренней ссылки основан на предположении, что `[[My page]]` это сокращение (или «[синтаксический сахар](https://ru.wikipedia.org/wiki/%D0%A1%D0%B8%D0%BD%D1%82%D0%B0%D0%BA%D1%81%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D1%81%D0%B0%D1%85%D0%B0%D1%80)», если хотите) для `[My page](My page)`.
 
-Объединив эти две вещи, мы создаем третий паттерн `![[My page]]`, являющийся эквивалентом `![My page](My page)` и соответствующий синтаксису вставки изображений.  При этом название ссылки должно совпадать с названием заметки.
+Объединив эти две вещи, мы создаем третий паттерн `![[My page]]`, являющийся эквивалентом `![My page](My page)` и соответствующий синтаксису встраивания изображений. При этом название в ссылке должно совпадать с именем заметки.
 
-Встречаются и другие варианты реализации этого механизма. Например, в Roam Research для вставки используется `{{embed: ((NODE_ID))}}`. Мы тоже рассматривали возможность использования подобного синтаксиса `((Page name))`, но, как нам кажется, `![[Page name]]` больше подходит для этого. Он понятен и оставляет больше вариантов для использования других символов по назначению.
+Встречаются и другие варианты реализации этого механизма. Например, в Roam Research для встраивания используется `{{embed: ((NODE_ID))}}`. Мы тоже рассматривали возможность использования подобного синтаксиса `((Page name))`, но, как нам кажется, `![[Page name]]` больше подходит для этого. Он понятен и оставляет больше вариантов для использования других символов по назначению.
 
 #### Изменение размера изображений
 
-Вы можете изменять размер изображений (`ШИРИНАxВЫСОТА`) используя следующий синтаксис:
+Вы можете изменять размер изображений используя следующий синтаксис:
 
-В формате Markdown `![AltText|100x100](https://url/to/image.png)`
+В формате Markdown `![AltText|100x100](https://url/to/image.png)`, где `100x100` – это `ШИРИНАxВЫСОТА`.
 
-В формате обычной вставки `![[image.png|100x100]]`
+В формате обычной вставки `![[image.png|100x100]]`.
 
 Чтобы сохранить соотношение сторон изображения при масштабировании опустите параметр высоты `![[image.png|100]]`.
