--- a/Руководства/Создание внутренних ссылок.md
+++ b/Руководства/Создание внутренних ссылок.md
@@ -2,18 +2,18 @@
 
 ### Ссылка на заметку
 
-Для создания внутренней ссылки просто наберите `[[`. Вам будет предложен список заметок, на которые вы можете ссылаться. Используйте клавиши стрелок `Вверх` и `Вниз` для перемещения по списку и `Enter` для вставки ссылки на выделенную заметку.
+Для создания внутренней ссылки просто наберите `[[`. Вам будет предложен список заметок, на которые вы можете ссылаться. Используйте клавиши со стрелками `Вверх` и `Вниз` для перемещения по списку и `Enter` для вставки ссылки на выделенную заметку.
 
 ### Ссылка на заголовок
 
 Вы можете сослаться на определенный заголовок внутри заметки. Начните вводить внутреннюю ссылку на заметку, как обычно. Когда нужная заметка будет выбрана из списка, нажмите `#` вместо `Enter` и вы увидите список заголовков этой заметки. Наберите название заголовка или перемещайтесь стрелками между ними. Нажимайте `#` для включения подзаголовков, если это необходимо. Для вставки ссылки нажмите `Enter`.
 
-Для того чтобы в области Предварительного просмотра в ссылке отображался текст, отличный от имени заметки на которую она ссылается, используйте вертикальную черту `|`. Например, `[[Имя заметки|Отображаемое имя заметки]]`. Аналогичным образом можно изменить текст [[Сворачивание заголовков и списков#Для примера|ссылки на заголовок]].
+Для того чтобы в области предварительного просмотра в ссылке отображался текст, отличный от имени заметки на которую она ссылается, используйте вертикальную черту `|`. Например, `[[Имя заметки|Отображаемое имя заметки]]`. Аналогичным образом можно изменить текст [[Сворачивание заголовков и списков#Для примера|ссылки на заголовок]].
 
 ### Переход по ссылкам
 
-- Для перехода по ссылке в области Предварительного просмотра, просто нажмите на нее.
-- Для открытия ссылку в новой области в области Предварительного просмотра, нажмите на нее удерживая `Ctrl/Cmd`.
-- Для перехода по ссылке в режиме Редактирования, нажмите на нее удерживая `Ctrl/Cmd`.
-- Для открытия ссылку в новой области в режиме Редактирования, нажмите на нее удерживая `Ctrl/Cmd-Shift`.
-- Для предварительного просмотра содержимого файла по ссылке, без перехода из текущей заметки, включите плагин [[Предпросмотр страницы]]. При наведении курсора на ссылку будет оборажаться всплывающее окно.
+- Для перехода по ссылке в области предварительного просмотра, просто кликните по ней.
+- Для открытия ссылку в новой области из области предварительного просмотра, кликните по ней удерживая `Ctrl/Cmd`.
+- Для перехода по ссылке в режиме редактирования, кликните по ней удерживая `Ctrl/Cmd`.
+- Для открытия ссылку в новой области из режима редактирования, кликните по ней удерживая `Ctrl/Cmd-Shift`.
+- Для предварительного просмотра содержимого файла по ссылке, без перехода из текущей заметки, включите плагин [[Предпросмотр страницы]]. При наведении курсора на ссылку будет отображаться всплывающее окно.
