--- a/Руководства/Создание заметок.md
+++ b/Руководства/Создание заметок.md
@@ -1,11 +1,11 @@
-Заметки создаются несколькими способами, в зависимости от рабочего процесса:
+Заметки создаются несколькими способами, в зависимости от вашего рабочего процесса:
 
-1. **Подход «от заметки»**. При необходимости создать заметку можно воспользоваться [[Файловый менеджер|файловым менеджером]]. Или сочетанием клавиш `Ctrl/Cmd+N`. Или, если включен плагин [[Палитра команд]], нажать `Ctrl/Cmd-p`, ввести «создать» и выбрать пункт создание новой заметки.
-1. **Подход «от ссылки»**. Если вы предпочитаете свободно создавать заметки, просто используйте [[Создание внутренних ссылок|внутреннюю ссылку]] на любое имя заметки (она не обязательно должна существовать в момент создания привязки). Чтобы начать писать во вновь созданной заметке, просто нажмите на название ссылки. Заметка автоматически создастся в хранилище и ее можно сразу редактировать.
+1. **Подход «от заметки»**. При необходимости создать заметку можно воспользоваться [[Файловый менеджер|Файловым менеджером]]. Или сочетанием клавиш `Ctrl/Cmd+N`. Или, если включен плагин [[Палитра команд]], нажать `Ctrl/Cmd-p`, ввести «создать» и выбрать пункт «Создать новую заметку».
+1. **Подход «от ссылки»**. Если вы предпочитаете свободно создавать заметки, просто используйте [[Создание внутренних ссылок|внутреннюю ссылку]] на любое имя заметки (она не обязательно должна существовать в момент создания ссылки). Чтобы начать писать во вновь созданной заметке, просто кликните по названию ссылки. Заметка автоматически создастся в хранилище и ее можно будет сразу редактировать.
 
 ![[Pasted image 3.png]]
 
-После создания заметки, ее заголовоу будет предлагаться в списке автозаполнения имен, так что не придется писать название заметки целиком каждый раз. Как только вы напишете `[[` выскочит окошко с перечнем заметок в хранилище. Просто набирайте название до тех пор пор, пока не появится нужное вам. Затем просто нажмите `Return` или кликните по нему мышкой, и название будет автоматически заполнено.
+После создания заметки, ее имя будет предлагаться в списке автозаполнения имен, так что не придется писать имя заметки целиком каждый раз. Как только вы введете `[[` выскочит окошко с перечнем заметок в хранилище. Просто набирайте название до тех пор, пока не появится нужное вам. Затем просто нажмите `Return` или кликните по нему мышкой, и название будет автоматически заполнено.
 
 Если у вас уже есть структура папок в [[Файловый менеджер|Файловом менеджере]], то создать заметку можно кликнув правой кнопкой мыши по папке. При этом заметка будет создана внутри папки:
 
